Quick fix to share, added cachebuster to css, forcing post titles to break the word in unreasonably long titles.

--- a/wordpress/wp-content/themes/Eris/assets/sass/_presentation.scss
+++ b/wordpress/wp-content/themes/Eris/assets/sass/_presentation.scss
@@ -81,6 +81,10 @@ ul.bullets {
   text-transform: lowercase;
 }
 
+.break-word {
+  word-wrap: break-word;
+}
+
 .background_light-gray {
   background-color: #f3f3f3;
 }
@@ -114,7 +118,7 @@ ul.bullets {
 // COMMONLY USED ELEMENTS
 .member {
   .info {
-    word-wrap: break-word;
+    @extend .break-word;
     h4, address {
       @extend .bold;
     }
@@ -131,7 +135,7 @@ ul.bullets {
 // CREST - the assembly of a user's image, title, name and address
 // Handles the display of user's images, names, titles and addresses (their crest)
 .crest {
-  word-wrap: break-word;
+  @extend .break-word;
   img {
     display: block;
     margin: 0 auto;
@@ -164,7 +168,7 @@ ul.bullets {
 
 .user-info {
   overflow:hidden;
-  word-wrap: break-word;
+  @extend .break-word;
   .user_avatar {
     a {
       display:block;
@@ -373,6 +377,7 @@ form {}
     font-size:font-size( 20 ); // 20px
     line-height:1.1em; // 22px
     margin:0 0 .625em; // 10px
+    @extend .break-word;
     @extend .bold;
   }
   .share-full {
@@ -676,6 +681,7 @@ textarea.discussion {
   .recent-activity_title, .recent_activity_excerpt {
     font-size:font-size(12);
     margin-bottom:.5em;
+    @extend .break-word;
   }
   .recent-activity_excerpt {
     padding: .3em 1em;
@@ -1165,7 +1171,7 @@ $tab-padding: "1em 0 .6em 0";
     }
     article {
       // font-size: font-size( 13 );
-      word-wrap: break-word;
+      @extend .break-word;
       p {
         margin-bottom:1em;
       }
@@ -1191,7 +1197,7 @@ $tab-padding: "1em 0 .6em 0";
     @include border-radius( 4px );
   }
   .span10 {
-    word-wrap: break-word;
+    @extend .break-word;
   }
   .trigger.discussion {
     height:1em;
@@ -1448,8 +1454,8 @@ button.follow {
   color:#333333;
   .member_screen-name, .member_location {
     font-size:font-size(12);
-    font-weight:bold;
-    word-wrap:break-word;
+    @extend .bold;
+    @extend .break-word;
   }
   .member_specialties, .member_last-posted, .member_answers, .member_posts,
   .member_comments {
